@@ -31,6 +31,7 @@ meaning in configuration and build)
 * the -k behaviour was restored (keep running after errors)
 * new interfaces for custom error handling
 * new interfaces for reordering the tasks before executing them (scheduling constraints)
+* modification of the installation system: use foo.install_path = '${PREFIX}/bin' instead of inst_var and inst_dir
 
 NEW IN WAF 1.4.3
 ----------------
